<resources>

    <string name="app_name">Vocabulury Quiz</string>
    <string name="masculine">Masculine</string>
    <string name="neutral">Neutral</string>
    <string name="feminine">Feminine</string>

    <string name="der">Der</string>
    <string name="das">Das</string>
    <string name="die">Die</string>
    <string name="correct">correct</string>
    <string name="wrong">wrong</string>


</resources>
